--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -7,14 +7,18 @@ jobs:
     name: Run Unit Tests
     runs-on: ubuntu-latest
 
-    steps: 
+    steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-        cache: 'npm'
+        with:
+          node-version: 18
+          cache: "npm"
 
-      - run: cpm ci
+      - run: npm ci
 
-      - run: npm run test
+      - name: Run Unit Tests
+        run: npm test
+        env:
+          NODE_ENV: 'test'
+          JWT_SECRET: 'jwt-secret'
